mitosheet: wrap the error message and make the formula bar cel editor add column headers in the correct location

--- a/mitosheet/css/endo/CellEditor.css
+++ b/mitosheet/css/endo/CellEditor.css
@@ -60,3 +60,9 @@
 .cell-editor-label {
     background-color: var(--mito-very-light-gray)
 }
+
+.cell-editor-error-container {
+    white-space: normal;
+    overflow-x: wrap;
+    overflow-wrap: break-word;
+}
